fixed stacked bar for non-creators, styling to align edges

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -100,7 +100,8 @@ body {
   }
 }
 
-#search-results {
+.search {
+  padding: 10px;
 }
 
 .result {
